--- a/app_server/views/second.pug
+++ b/app_server/views/second.pug
@@ -1,8 +1,14 @@
 extends layout
 
 block content
-    h1= 'Amount of species found in Helsinki'
-    ul
-        each entry in species
-            li= entry.type + ': ' + entry.amount
+
+    .container
+        .row
+            .col-sm-4(style='padding-left:0;')
+                img.img-fluid(src='images/nature3.png', alt='heron')
+            .col-sm-8(style="padding-top:5em;")
+                h1= 'Amount of species found in Helsinki'
+                ul
+                    each entry in species
+                        li= entry.type + ': ' + entry.amount
 
