--- a/app_server/views/layout.pug
+++ b/app_server/views/layout.pug
@@ -24,7 +24,7 @@ html
                         a.nav-link(href='/second') Amount of species in Helsinki
 
     block content
-    footer.bg-light.fixed-bottom
+    footer.bg-light
         .container
             small.text-muted &copy; Helena Uotila 2018
 
