--- a/app_server/views/layout.pug
+++ b/app_server/views/layout.pug
@@ -17,9 +17,9 @@ html(lang='eng')
                     li.nav-item
                         a.nav-link(href='/') Home
                     li.nav-item
-                        a.nav-link(href='/first') Nature trails in Helsinki
+                        a.nav-link(href='/trails') Nature trails in Helsinki
                     li.nav-item
-                        a.nav-link(href='/second') Amount of species in Helsinki
+                        a.nav-link(href='/species') Amount of species in Helsinki
 
     block content
     footer.bg-light.fixed-bottom
