--- a/app_server/views/trails.pug
+++ b/app_server/views/trails.pug
@@ -11,3 +11,4 @@ block content
                 ul
                     each entry in trails
                         li= entry.name + '/' + entry.type
+                a(href='/trails/add') Add a new trail
