--- a/app_server/views/index.pug
+++ b/app_server/views/index.pug
@@ -7,4 +7,5 @@ block content
                 img.img-fluid(src='images/nature1.png', alt='winter')
             .col-sm-8(style="padding-top:5em;")
                 h1= 'Welcome!'
-                p On this page you can find information about the natural sites and different species in Helsinki area.
+                p On this page you can find information about the natural sites and different species in Helsinki area and add your own data about trekking and sightings.
+                p Helsinki has 10 nature trails for example forests and islands. Some of the areas are protected and some are reserved for recreational activities. Check out the trails page to add your own data. From the species page you can see the amount of species in different groups in Helsinki.
